Add inventory UI and suicide action for characters
Introduces new inventory UI components for item selection, equipping, dropping, and using items. Adds a suicide action to GameCharacter and Enemy, allowing characters to end their own life. Refactors base equipment creation to use factory methods, improves inventory management, and updates battle and rest UI logic to support new actions and item usage.